--- a/style.css
+++ b/style.css
@@ -11,7 +11,16 @@
 /* Muhammadg'ziy */
 
 /* Iqrorjon */
-
+.img_card{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.img_card img{
+    width: 330px;
+    height: 200px;
+}
 /* Iqrorjon */
 
 /* Shahriyor */
