--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
 /* navbar */
+*{
+    margin: 0px;
+    padding: 0px;
+}
+.navbar{
+    background-color: rgba(22, 182, 62, 0.589);
+    color: blue;
+    height: 50px;
+    font-size: larger;
+    padding-left: 50%;
+}
+.navbar ul li{
+    list-style: none;
+    padding-top: 10px;
+    
+
+
+}
+.navbar ul li a{
+    text-decoration: none;
+    padding-left: 20px;
+    border: 1px solid white;
+    padding: 1%;
+}
+.foto{
+    height: 100px;
+}
+.fot{
+    height: 512px;
+}
 
 /* !===navbar */
 
